--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,12 @@
                 "--dev",
                 "--env",
                 "${workspaceFolder}/dev/env/general-services.dev.env"
+            ],
+            "substitutePath": [
+                {
+                    "from": "/home/joefe/repos/automate/automate-server",
+                    "to": "/mnt/windows/Users/joefe/source/repos/automate/automate-server",
+                },
             ]
         },
         {
