--- a/dev/docker/docker-compose.yaml
+++ b/dev/docker/docker-compose.yaml
@@ -1,5 +1,4 @@
 version: '3'
-
 services:
   postgres:
     networks:
@@ -8,7 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
     volumes:
-      - db:/var/lib/postgresql/data
+      - 'db:/var/lib/postgresql/data'
       - type: bind
         source: ./init-db.sh
         target: /docker-entrypoint-initdb.d/init-db.sh
@@ -18,15 +17,15 @@ services:
     ports:
       - '5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test:
+        - CMD-SHELL
+        - pg_isready
       interval: 10s
       timeout: 5s
       retries: 5
-  
 volumes:
   db:
     driver: local
-
 networks:
   common:
     driver: bridge
