--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "caarlos",
         "deadpool",
         "evmap",
+        "gocql",
         "godotenv",
         "gofiber",
         "jsonwebtoken",
@@ -16,5 +17,15 @@
         "uptrace",
         "xactor",
         "xhit"
-    ]
+    ],
+    "go.lintOnSave": "file",
+    "go.formatTool": "goimports",
+    "go.useLanguageServer": true,
+    "[go]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        }
+    },
+    "go.docsTool": "gogetdoc"
 }
