--- a/dev/env/general-service.dev.env
+++ b/dev/env/general-service.dev.env
@@ -1,7 +1,7 @@
 LISTEN_ADDR=:3000
 TIMEOUT=10
 READ_BUFFER_SIZE=5242880
-APP_NAME=Automate-GeneralServices
+APP_NAME=GeneralService
 DSN="postgres://postgres:postgres@localhost:5432/automate?sslmode=disable"
 AUTH_GOOGLE_CLIENT_ID="12728437632-so93s9qv4q1a6vi4vehu392k45cpb6p3.apps.googleusercontent.com"
 AUTH_GOOGLE_CLIENT_SECRET="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"
