--- a/dev/env/oauth2-service.dev.env
+++ b/dev/env/oauth2-service.dev.env
@@ -2,7 +2,7 @@ LISTEN_ADDR=:3001
 TIMEOUT=10
 READ_BUFFER_SIZE=5242880
 BODY_LIMIT=16777216
-APP_NAME=Automate-OAuth2
+APP_NAME=OAuth2
 DSN="postgres://postgres:postgres@localhost:5432/automate?sslmode=disable"
 COOKIE_KEY=c9e7de7ddd7aff20ebcff578855342c2
 REDIRECT_URI="http://localhost:3000/"
