--- a/dev/docker/docker-compose.yaml
+++ b/dev/docker/docker-compose.yaml
@@ -1,9 +1,10 @@
-version: '3'
+version: '3.9'
 services:
   postgres:
     networks:
       - common
     image: postgres
+    container_name: postgres
     environment:
       POSTGRES_PASSWORD: postgres
     volumes:
@@ -27,6 +28,7 @@ services:
     networks:
       - common
     image: bitnami/redis
+    container_name: redis-internal
     environment:
       - REDIS_PASSWORD=password123
     ports:
